turtleart.lessons.turtleart.Main.DiskFourth.scala.error
Source:1: error: Missing closing brace `}' assumed here
override def run() {
^Source:1: error: expected start of definition
override def run() {
         ^Source:5: error: expected class or object definition
def arcCircle(radius:Int, arc : Int, rays:Int) {
^